seaqt/QtSql/gen_qsqlfield.h

class QSqlField;
class QVariant;
typedef struct QSqlField QSqlField;
typedef struct QVariant QVariant;
QSqlField* QSqlField_new();
QSqlField* QSqlField_new_fieldName_type_tableName(struct seaqt_string fieldName, int type, struct seaqt_string tableName);
QSqlField* QSqlField_new_from(QSqlField* from);
QSqlField* QSqlField_new_fieldName(struct seaqt_string fieldName);
QSqlField* QSqlField_new_fieldName_type(struct seaqt_string fieldName, int type);
void QSqlField_operatorAssign(QSqlField* self, QSqlField* from);
bool QSqlField_operatorEqual(const QSqlField* self, QSqlField* other);
bool QSqlField_operatorNotEqual(const QSqlField* self, QSqlField* other);
void QSqlField_setValue(QSqlField* self, QVariant* value);
QVariant* QSqlField_value(const QSqlField* self);
void QSqlField_setName(QSqlField* self, struct seaqt_string name);
struct seaqt_string QSqlField_name(const QSqlField* self);
void QSqlField_setTableName(QSqlField* self, struct seaqt_string tableName);
struct seaqt_string QSqlField_tableName(const QSqlField* self);
bool QSqlField_isNull(const QSqlField* self);
void QSqlField_setReadOnly(QSqlField* self, bool readOnly);
bool QSqlField_isReadOnly(const QSqlField* self);
void QSqlField_clear(QSqlField* self);
int QSqlField_type(const QSqlField* self);
bool QSqlField_isAutoValue(const QSqlField* self);
void QSqlField_setType(QSqlField* self, int type);
void QSqlField_setRequiredStatus(QSqlField* self, int status);
void QSqlField_setRequired(QSqlField* self, bool required);
void QSqlField_setLength(QSqlField* self, int fieldLength);
void QSqlField_setPrecision(QSqlField* self, int precision);
void QSqlField_setDefaultValue(QSqlField* self, QVariant* value);
void QSqlField_setSqlType(QSqlField* self, int type);
void QSqlField_setGenerated(QSqlField* self, bool gen);
void QSqlField_setAutoValue(QSqlField* self, bool autoVal);
int QSqlField_requiredStatus(const QSqlField* self);
int QSqlField_length(const QSqlField* self);
int QSqlField_precision(const QSqlField* self);
QVariant* QSqlField_defaultValue(const QSqlField* self);
int QSqlField_typeID(const QSqlField* self);
bool QSqlField_isGenerated(const QSqlField* self);
bool QSqlField_isValid(const QSqlField* self);